[gd_scene format=3 uid="uid://jahrfmmerrop"]

[ext_resource type="Script" uid="uid://cif3suar8nsbf" path="res://scripts/enemy.gd" id="1_wocse"]
[ext_resource type="Texture2D" uid="uid://655jxi60alfn" path="res://BoarW/Hit-Sheet-White.png" id="2_wocse"]
[ext_resource type="Texture2D" uid="uid://xf6riqxi4aqx" path="res://BoarW/Idle-Sheet-White.png" id="3_xq3rf"]
[ext_resource type="Texture2D" uid="uid://cp3vvktlxx2k8" path="res://BoarW/Run-Sheet-White.png" id="4_ybv8m"]
[ext_resource type="Texture2D" uid="uid://cc44c2cjlm857" path="res://BoarW/Walk-Base-Sheet-White.png" id="5_rim8a"]
[ext_resource type="Texture2D" uid="uid://clxqec7sxf6ec" path="res://sprites/Sprite-Vorrat/BloodFX Batch 1/VFX Blood Batch 1_SpriteSheetColumns.png" id="6_5rcse"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q6m5s"]
atlas = ExtResource("2_wocse")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rcse"]
atlas = ExtResource("2_wocse")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cue45"]
atlas = ExtResource("2_wocse")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0py0"]
atlas = ExtResource("2_wocse")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1su4n"]
atlas = ExtResource("3_xq3rf")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_83ldg"]
atlas = ExtResource("3_xq3rf")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6pr4"]
atlas = ExtResource("3_xq3rf")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hc30g"]
atlas = ExtResource("3_xq3rf")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_auhwa"]
atlas = ExtResource("4_ybv8m")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_neaqy"]
atlas = ExtResource("4_ybv8m")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sd5ij"]
atlas = ExtResource("4_ybv8m")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ey5mc"]
atlas = ExtResource("4_ybv8m")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jaxx"]
atlas = ExtResource("4_ybv8m")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ojeh"]
atlas = ExtResource("4_ybv8m")
region = Rect2(240, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmriy"]
atlas = ExtResource("5_rim8a")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cy4c"]
atlas = ExtResource("5_rim8a")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7f6dt"]
atlas = ExtResource("5_rim8a")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4elx"]
atlas = ExtResource("5_rim8a")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_psuhg"]
atlas = ExtResource("5_rim8a")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smdgn"]
atlas = ExtResource("5_rim8a")
region = Rect2(240, 0, 48, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_aohpx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6m5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rcse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cue45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0py0")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1su4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83ldg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6pr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hc30g")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6m5s")
}],
"loop": true,
"name": &"knockback",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_auhwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neaqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sd5ij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ey5mc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jaxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ojeh")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmriy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cy4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7f6dt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4elx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psuhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smdgn")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r6548"]
size = Vector2(23.5, 25.875)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lypk"]
atlas = ExtResource("6_5rcse")
region = Rect2(220, 500, 110, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6he5n"]
atlas = ExtResource("6_5rcse")
region = Rect2(220, 0, 110, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_72mxr"]
atlas = ExtResource("6_5rcse")
region = Rect2(220, 100, 110, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlswv"]
atlas = ExtResource("6_5rcse")
region = Rect2(220, 200, 110, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4vq7"]
atlas = ExtResource("6_5rcse")
region = Rect2(220, 300, 110, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sl5hn"]
atlas = ExtResource("6_5rcse")
region = Rect2(220, 400, 110, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_sl5hn"]
animations = [{
"frames": [{
"duration": 0.01,
"texture": SubResource("AtlasTexture_1lypk")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_6he5n")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_72mxr")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_hlswv")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_y4vq7")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_sl5hn")
}, {
"duration": 0.01,
"texture": SubResource("AtlasTexture_1lypk")
}],
"loop": false,
"name": &"blood",
"speed": 5.0
}]

[node name="Light Boar" type="CharacterBody2D" unique_id=696404604]
collision_layer = 4
script = ExtResource("1_wocse")

[node name="Pivot" type="Node2D" parent="." unique_id=1284381159]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Pivot" unique_id=507102566]
position = Vector2(0, -8)
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_aohpx")
animation = &"walk"
frame_progress = 0.8956595

[node name="RayCast" type="RayCast2D" parent="Pivot" unique_id=510978204]
visible = false
position = Vector2(0, 1.005)
target_position = Vector2(22, -0.004999995)

[node name="View" type="Area2D" parent="Pivot" unique_id=1630464821]
position = Vector2(-11, -3)
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Pivot/View" unique_id=1075318041 groups=["enemy"]]
visible = false
scale = Vector2(-1, 1)
polygon = PackedVector2Array(-24, -1, -176, -1, -176, -62)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1187871853 groups=["enemy"]]
visible = false
position = Vector2(1.5, -4.5)
shape = SubResource("RectangleShape2D_r6548")

[node name="KillArea2D" type="Area2D" parent="." unique_id=915241367]
visible = false
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea2D" unique_id=1285680894 groups=["enemy"]]
position = Vector2(4, -5.0625)
shape = SubResource("RectangleShape2D_r6548")

[node name="BloodParent2D" type="Node2D" parent="." unique_id=639331852]

[node name="BloodSprite2D" type="AnimatedSprite2D" parent="BloodParent2D" unique_id=1385389168]
position = Vector2(-19.000002, -13)
rotation = -3.1415925
scale = Vector2(0.6, -0.61)
sprite_frames = SubResource("SpriteFrames_sl5hn")
animation = &"blood"

[connection signal="body_entered" from="Pivot/View" to="." method="_on_aggro_body_entered"]
[connection signal="body_exited" from="Pivot/View" to="." method="_on_aggro_body_exited"]
[connection signal="body_entered" from="KillArea2D" to="." method="_on_killzone_body_entered"]
